<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

<PreferenceCategory android:title="General">

<EditTextPreference android:key="@string/PROXY_SERVICE_HOST"
android:defaultValue="localhost"
android:title="ProxyServiceHost"
android:summary="Proxy Service Listen Host"
android:dialogTitle="ProxyServiceHost Setting"
android:persistent="true"
/>

<EditTextPreference android:key="@string/PROXY_SERVICE_PORT"
android:defaultValue="48100"
android:title="ProxyServicePort"
android:summary="Proxy Service Listen Port"
android:dialogTitle="ProxyServicePort Setting"
android:persistent="true"
/>

<EditTextPreference android:key="@string/THREAD_POOL_SIZE"
android:defaultValue="30"
android:title="ThreadPoolSize"
android:summary="Application Thread Pool Size"
android:dialogTitle="ThreadPoolSize Setting"
android:persistent="true"
/>
</PreferenceCategory>

<PreferenceCategory android:title="Google AppEngine">

<EditTextPreference android:key="@string/GOOGLE_APPID_LIST"
android:defaultValue=""
android:title="Appengine appids"
android:summary="Format: [user:password@]appid1, [user:password@]appid2"
android:dialogTitle="Appengine AppIDs Setting"
android:persistent="true"
/>

<EditTextPreference android:key="@string/GAE_CONNECTION_MODE"
android:defaultValue="HTTP"
android:title="Connection Mode"
android:summary="Appspot Web Server Connection Mode"
android:dialogTitle="Connection Mode Setting"
android:persistent="true"
/>

<EditTextPreference android:key="@string/XMPP_ACCOUNTS"
android:defaultValue=""
android:title="XMPP Accounts"
android:summary="Format: [user:password@]server1[:port], [user:password@]server2[:port]"
android:dialogTitle="Appengine AppIDs Setting"
android:persistent="true"
/>

<EditTextPreference android:key="@string/LOCAL_PROXY"
android:defaultValue="http://www.google.cn:80"
android:title="Local Proxy"
android:summary="Format: [https://][user:pass@]server1[:port]"
android:dialogTitle="Local Proxy Setting"
android:persistent="true"
/>


</PreferenceCategory>

</PreferenceScreen>
